don't consider buying items from the same store in a different order